<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"

            android:padding="@dimen/padding_margin_8">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewUser"
                android:layout_width="match_parent"
                android:background="@drawable/square_border"
                android:layout_height="@dimen/height_width_180"
                android:padding="@dimen/padding_margin_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_margin_10"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewUserFolowers"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_36"
                    android:layout_weight="1"
                    android:text="@string/followers_11"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/padding_margin_5"
                    android:textSize="@dimen/text_13"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewUserFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_36"
                    android:text="@string/following_121"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_13"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_margin_10"
                android:background="@drawable/square_border"
                android:padding="@dimen/padding_margin_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewUserName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_40"
                    android:text="@string/name_jone"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_13"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewUserCompany"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_40"
                    android:text="@string/company_apple"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_13"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewUserBlog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_width_40"
                    android:text="@string/blog_www_apple_com"
                    android:gravity="center_vertical"
                    android:lines="2"
                    android:textSize="@dimen/text_13"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittextNotes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_width_100"
                android:lines="3"
                android:layout_marginTop="@dimen/padding_margin_15"
                android:textSize="@dimen/text_13"
                android:background="@drawable/square_border"
                android:padding="@dimen/padding_margin_5"
                android:lineSpacingExtra="@dimen/padding_margin_5"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textviewSave"
                android:layout_width="@dimen/height_width_100"
                android:layout_height="@dimen/height_width_48"
                android:layout_marginTop="@dimen/padding_margin_15"
                android:text="@string/save"
                android:background="@drawable/login_edittext_square_boarder"
                android:textSize="@dimen/text_20"
                android:gravity="center"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>